testsuite/tests/typing-sigsubst/test_locations.compilers.reference
File "test_loc_type_eq.ml", line 1, characters 49-76:
1 | module M : Test_functor.S with type elt = unit = Test_functor.Apply (String)
                                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Signature mismatch:
       ...
       Try changing type elt to
       type elt = unit
File "test_loc_modtype_type_eq.ml", line 3, characters 15-42:
3 | module M : S = Test_functor.Apply (String)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Signature mismatch:
       Modules do not match:
         sig
           type elt = String.t
           type t = Test_functor.Apply(String).t
           val create : elt -> t
         end
       is not included in
         S
       Try changing type elt to
       type elt = unit
File "test_loc_type_subst.ml", line 1, characters 50-77:
1 | module M : Test_functor.S with type elt := unit = Test_functor.Apply (String)
                                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Signature mismatch:
       Modules do not match:
         sig
           type elt = String.t
           type t = Test_functor.Apply(String).t
           val create : elt -> t
         end
       is not included in
         sig type t val create : unit -> t end
       Try changing value create to be a unit -> t
File "test_loc_modtype_type_subst.ml", line 3, characters 15-42:
3 | module M : S = Test_functor.Apply (String)
                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: Signature mismatch:
       Modules do not match:
         sig
           type elt = String.t
           type t = Test_functor.Apply(String).t
           val create : elt -> t
         end
       is not included in
         S
       Try changing value create to be a unit -> t
